<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_base_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="20dip"
            android:text="@string/dialog_defalut_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <FrameLayout
            android:id="@+id/dialog_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/dialog_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:gravity="right|center"
            android:padding="10dip">

            <TextView
                android:id="@+id/dialog_calcel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_btn_selector"
                android:gravity="center"
                android:paddingBottom="7dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="7dip"
                android:text="@string/dialog_defalut_cancel_text"
                android:textColor="@color/dialog_btn_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_confirm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_btn_selector"
                android:gravity="center"
                android:paddingBottom="7dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="7dip"
                android:text="@string/dialog_defalut_confirm_text"
                android:textColor="@color/dialog_btn_text"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>